[package]
name = "airjump-multi"
version = "0.1.0"
authors = ["thiolliere <gui.thiolliere@gmail.com>"]

[dependencies]
image = "0.19"
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
winit = "0.14"
gilrs = "0.6"
specs = "0.12"
nphysics2d = "0.8"
ncollide2d = "0.15"
alga = "0.5"
hibitset = "0.5"
fnv = "1"
derive_deref = "1"
enum-iterator-derive = "0.1"
specs-derive = "0.2"
nalgebra = "0.14"

[replace]
"vulkano-win:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
"vulkano:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
"vulkano-shader-derive:0.9.0" = { git = "https://github.com/thiolliere/vulkano" }
